<resources>
    <string name="app_name">Donation App</string>

    <string name="feed_title_bar_label">Donation Feed</string>
    <string name="search_title_bar_label">Research Charities</string>
    <string name="stats_title_bar_label">Donation Statistics</string>
    <string name="goals_title_bar_label">Donation Goals</string>
    <string name="history_title_bar_label">Donation History</string>

    <string name="email_hint_text">Email address</string>
    <string name="password_hint_text">Password</string>

    <string name="login_or_register_button_label">Login/Sign up</string>
    <string name="auto_donate_label_on">Auto Donate (ON)</string>
    <string name="auto_donate_label_off">Auto Donate (OFF)</string>

    <string name="category_statistics_button_label">Donations, Statistics, and Options</string>
    <string name="category_search_button_label">Discover Charities and Foundations</string>
    <string name="category_feed_button_label">Donation Feed</string>
    <string name="category_account_settings_button_label">Account and Settings</string>

    <string name="feed_user_label">Me</string>
    <string name="feed_friends_label">Friends</string>
    <string name="feed_charities_label">Charities</string>

    <string name="search_rating_sort_label">Rating</string>
    <string name="search_distance_sort_label">Distance</string>
    <string name="search_name_sort_label">Name</string>

    <string name="graph_day_label">Day:</string>
    <string name="graph_week_label">Week of:</string>
    <string name="graph_month_label">Month:</string>

    <string name="history_week_label">Week</string>
    <string name="history_month_label">Month</string>
    <string name="history_year_label">Year</string>
    <string name="history_donation_text">You have donated:</string>

    <string name="charity_view_profile_label">Profile</string>
    <string name="charity_view_data_label">Data</string>
    <string name="charity_view_user_label">Personal</string>
    <string name="charity_auto_donate_label_true">This is charity is your auto-donate recipient</string>
    <string name="charity_auto_donate_label_false">Set as auto-donate recipient</string>
    <string name="charity_donate_now_label">Donate now</string>
    <string name="charity_bio_label">Charity Bio</string>
    <string name="charity_recent_posts_label">Recent Posts</string>
    <string name="charity_submit_donation_label">Submit</string>
    <string name="charity_cancel_donation_label">Cancel</string>
    <string name="charity_submit_donation_field_hint">Enter a donation amount&#8230;</string>
    <string name="charity_rating_detailed_top_label">CharityNavigator rating:</string>
    <string name="charity_personal_history_title">Personal History</string>
    <string name="charity_personal_history_text_1">You have donated</string>
    <string name="charity_personal_history_text_2a">to</string>
    <string name="charity_personal_history_text_2b">over a period of</string>
    <string name="charity_personal_history_text_3">has received</string>
    <string name="charity_personal_history_text_4">of your total lifetime donations.</string>

    <string name="post_comment_field_hint">Write a comment&#8230;</string>
    <string name="post_comment_button_label">Post</string>

    <string name="category_goals_button_label">Donation Goals</string>
    <string name="category_history_button_label">Donation History</string>
    <string name="category_breakdown_button_label">Donation Breakdown</string>

    <string name="invalid_email_message">Please enter a valid email address</string>
    <string name="invalid_password_message_1">Password must be at least </string>
    <string name="invalid_password_message_2"> characters long</string>

    <string name="user_email_key">user_email_key</string>
    <string name="user_auto_donate_key">user_auto_donate_key</string>
    <string name="user_password_key">user_password_key</string>

</resources>
