<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorAccent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/charity_personal_history_title"
            android:id="@+id/textViewPersonalHistoryTitle"
            android:padding="@dimen/standard_header_padding"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault"
            android:background="@color/containerBackgroundLightGrey" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/charity_personal_history_text_1"
            android:id="@+id/textViewPersonalHistoryLine1"
            android:padding="@dimen/standard_header_padding"
            android:gravity="center"
            android:textColor="@color/defaultTextColor"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Total amount text"
            android:id="@+id/textViewPersonalHistoryValue1"
            android:gravity="center"
            android:textColor="@color/defaultTextColor"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault"
            android:textSize="@dimen/charity_personal_value_text_size"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/charity_personal_history_text_2a"
            android:id="@+id/textViewPersonalHistoryLine2"
            android:padding="@dimen/standard_header_padding"
            android:gravity="center"
            android:textColor="@color/defaultTextColor"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Time period text"
            android:id="@+id/textViewPersonalHistoryValue2"
            android:gravity="center"
            android:textColor="@color/defaultTextColor"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault"
            android:textSize="@dimen/charity_personal_value_text_size"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/charity_personal_history_text_3"
            android:id="@+id/textViewPersonalHistoryLine3"
            android:padding="@dimen/standard_header_padding"
            android:gravity="center"
            android:textColor="@color/defaultTextColor"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Donation percentage text"
            android:id="@+id/textViewPersonalHistoryValue3"
            android:gravity="center"
            android:textColor="@color/defaultTextColor"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault"
            android:textSize="@dimen/charity_personal_value_text_size"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/charity_personal_history_text_4"
            android:id="@+id/textViewPersonalHistoryLine4"
            android:padding="@dimen/standard_header_padding"
            android:gravity="center"
            android:textColor="@color/defaultTextColor"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:padding="@dimen/thin_border_width"
            android:background="@color/charityDetailPersonalDonationPercentageBar"
            android:layout_marginTop="@dimen/activity_horizontal_margin">

            <com.example.psweeney.donationappandroid.PercentageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/charity_personal_donation_percentage_height"
                android:id="@+id/percentageViewPersonalHistory"
                android:background="@color/colorPrimary" />
        </FrameLayout>
    </LinearLayout>


</LinearLayout>