<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.psweeney.donationappandroid.HistoryScreen">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:padding="@dimen/thin_border_width" >

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:onClick="onButtonClickWeekHistory"
                android:id="@+id/frameWeekHistoryButton" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault"
                    android:text="@string/history_week_label"
                    android:id="@+id/textViewWeekHistoryLabel"
                    android:textAlignment="center"
                    android:background="@color/colorPrimary"
                    android:padding="@dimen/feed_category_text_padding"
                    android:textStyle="bold"
                    android:textColor="@color/colorAccent"
                    android:clickable="false" />
            </FrameLayout>

            <Space
                android:layout_width="2dp"
                android:layout_height="0dp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onButtonClickMonthHistory"
                android:clickable="true"
                android:id="@+id/frameMonthHistoryButton" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault"
                    android:text="@string/history_month_label"
                    android:id="@+id/textViewMonthHistoryLabel"
                    android:textAlignment="center"
                    android:background="@color/colorAccent"
                    android:padding="@dimen/feed_category_text_padding"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />
            </FrameLayout>

            <Space
                android:layout_width="2dp"
                android:layout_height="0dp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:onClick="onButtonClickYearHistory"
                android:id="@+id/frameYearHistoryButton" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault"
                    android:text="@string/history_year_label"
                    android:id="@+id/textViewYearHistoryLabel"
                    android:textAlignment="center"
                    android:background="@color/colorAccent"
                    android:padding="@dimen/feed_category_text_padding"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary" />
            </FrameLayout>

        </LinearLayout>

        <Space
            android:layout_width="2dp"
            android:layout_height="10dp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/linearLayout"
            android:id="@+id/frameLayoutWeek">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault"
                android:text="@string/graph_day_label"
                android:id="@+id/textView8"
                android:textAlignment="center"
                android:background="@color/colorAccent"
                android:padding="@dimen/feed_category_text_padding"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:id="@+id/weekChartContainer"
                android:paddingTop="@dimen/activity_vertical_margin" >

            </FrameLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/history_donation_text"
                android:id="@+id/textView11"
                android:padding="@dimen/standard_header_padding"
                android:gravity="center"
                android:textColor="@color/defaultTextColor"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Total amount text"
                android:id="@+id/history_week_text"
                android:gravity="center"
                android:textColor="@color/defaultTextColor"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault"
                android:textSize="@dimen/charity_personal_value_text_size"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/linearLayout"
            android:id="@+id/frameLayoutMonth">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault"
                android:text="@string/graph_week_label"
                android:id="@+id/textView9"
                android:textAlignment="center"
                android:background="@color/colorAccent"
                android:padding="@dimen/feed_category_text_padding"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:id="@+id/monthChartContainer"
                android:paddingTop="@dimen/activity_vertical_margin" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/history_donation_text"
                android:id="@+id/textView12"
                android:padding="@dimen/standard_header_padding"
                android:gravity="center"
                android:textColor="@color/defaultTextColor"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Total amount text"
                android:id="@+id/history_month_text"
                android:gravity="center"
                android:textColor="@color/defaultTextColor"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault"
                android:textSize="@dimen/charity_personal_value_text_size"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/linearLayout"
            android:id="@+id/frameLayoutYear">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault"
                android:text="@string/graph_month_label"
                android:id="@+id/textView10"
                android:textAlignment="center"
                android:background="@color/colorAccent"
                android:padding="@dimen/feed_category_text_padding"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:id="@+id/yearChartContainer"
                android:paddingTop="@dimen/activity_vertical_margin" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/history_donation_text"
                android:id="@+id/textView13"
                android:padding="@dimen/standard_header_padding"
                android:gravity="center"
                android:textColor="@color/defaultTextColor"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Total amount text"
                android:id="@+id/history_year_text"
                android:gravity="center"
                android:textColor="@color/defaultTextColor"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault"
                android:textSize="@dimen/charity_personal_value_text_size"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
